integration and updating

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "styling",
+  "name": "learning-bridge",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:5000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -32,5 +31,6 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^4.4.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
