--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ jwt
 flask_swagger_ui
 flask_swagger
 flask_sqlalchemy
+flasgger
 LB_USER=lb LB_PWD=Team_Project LB_HOST=localhost  LB_DB=LB ENV=development python3 -m run
