--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,83 @@
-python-dotenv
-flask
 flask_cors
 sqlalchemy
-flask
-Flask-SQLAlchemy
-mysqlclient
-jwt
 flask_swagger_ui
 flask_swagger
 flask_sqlalchemy
-flasgger
+appdirs==1.4.4
+asgiref==3.7.2
+async-timeout==4.0.3     
+attrs==23.2.0
+autopep8==2.0.4
+Babel==2.15.0
+backports.zoneinfo==0.2.1
+bcrypt==4.1.2
+blinker==1.7.0
+certifi==2024.2.2        
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==42.0.2
+decorator==5.1.1
+Deprecated==1.2.14
+dnspython==2.6.1
+email-validator==2.1.1
+fabric==3.2.2
+Fabric3==1.14.post1
+flasgger==0.9.7.1
+flask==3.0.2
+flask-babel==4.0.0
+Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.1
+Flask-Login==0.6.3
+flask-sqlalchemy==3.1.1
+flask-swagger==0.2.14
+flask-swagger-ui==4.11.1
+flask-wtf==1.2.1
+frozen-flask==1.0.2
+greenlet==3.0.3
+gunicorn==23.0.0
+idna==3.6
+importlib-metadata==7.0.1
+importlib-resources==6.4.0
+invoke==2.2.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jwt==1.3.1
+MarkupSafe==2.1.3
+mistune==3.0.2
+mysql-connector-python==8.3.0
+mysql-connector-python-rf==2.2.2
+mysqlclient==2.2.1
+packaging==24.1
+parameterized==0.9.0
+paramiko==3.4.0
+pillow==10.2.0
+pkgutil-resolve-name==1.3.10
+pycodestyle==2.11.1
+pycparser==2.21
+pymongo==4.7.0
+PyMySQL==1.1.1
+PyNaCl==1.5.0
+pyparsing==3.1.1
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.4
+referencing==0.35.1
+requests==2.31.0
+rpds-py==0.18.1
+six==1.16.0
+SQLAlchemy==2.0.23
+sqlparse==0.4.4
+svgwrite==1.4.3
+tomli==2.0.1
+Tree==0.2.4
+typing-extensions==4.9.0
+ufw==0.36
+urllib3==2.2.0
+werkzeug==3.0.1
+wrapt==1.16.0
+wtforms==3.1.2
+zipp==3.17.0
