--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,16 @@
-flask_cors
-sqlalchemy
-flask_swagger_ui
-flask_swagger
-flask_sqlalchemy
-appdirs
-asgiref
-async-timeout==4.0.3     
-attrs
-autopep8
-Babel
-backports.zoneinfo
-bcrypt
-blinker
-certifi
-cffi
-charset-normalizer
-click
-cryptography
-decorator
-Deprecated
-dnspython
-email-validator
-fabric
-Fabric3
-flasgger
 flask
-flask-babel
-Flask-Bcrypt
 Flask-Cors
+Flask-Babel
 Flask-Login
-flask-sqlalchemy
-flask-swagger
+Flask-WTF
+Flask-SQLAlchemy
 flask-swagger-ui
-flask-wtf
-frozen-flask
-greenlet
+flasgger
 gunicorn
-idna
-importlib-metadata
-importlib-resources
-invoke
-itsdangerous
-Jinja2
-jsonschema
-jsonschema-specifications
-jwt
-backports.zoneinfo;python_version<"3.9"
-MarkupSafe
-mistune
-mysql-connector-python
-mysql-connector-python-rf
-mysqlclient
-packaging
-parameterized
-paramiko
-pillow
-pkgutil-resolve-name
-pycodestyle
-pycparser
-pymongo
-PyMySQL
-PyNaCl
-pyparsing
-python-dotenv
-pytz
-PyYAML
-redis
-referencing
-requests
-rpds-py
-six
-SQLAlchemy
-sqlparse
-svgwrite
-Tree
+sqlalchemy
+flask-swagger
 typing-extensions
-urllib3
 wheel
 werkzeug
 wrapt
 wtforms
-zipp
